--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "maxbanton/cwh",
-    "homepage": "https://github.com/maxbanton/cwh",
+    "name": "mcn-fredw/mcn-cwh",
+    "homepage": "https://github.com/mcn-fredw/mcn-cwh",
     "type": "library",
     "description": "AWS CloudWatch Handler for Monolog library",
     "keywords": [
@@ -14,30 +14,22 @@
             "name": "Max Leonov",
             "email": "hi@maxleonov.pw",
             "homepage": "https://maxleonov.pw"
+        },
+        {
+            "name": "Fred Woods"
         }
     ],
-    "support": {
-        "issues": "https://github.com/maxbanton/cwh/issues",
-        "source": "https://github.com/maxbanton/cwh"
-    },
     "require": {
         "php": "^7.2 || ^8",
-        "monolog/monolog": "^2.0",
-        "aws/aws-sdk-php": "^3.18"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^8.5 || ^9.4",
-        "squizlabs/php_codesniffer": "^3.5"
-    },
-    "suggest": {
-        "maxbanton/dd": "Minimalistic dump-and-die function for easy debugging"
+        "monolog/monolog": "*",
+        "aws/aws-sdk-php": "*"
     },
     "config": {
         "preferred-install": "dist"
     },
     "autoload": {
         "psr-4": {
-            "Maxbanton\\Cwh\\": "src"
+            "McnCwh\\": "src"
         }
     },
     "minimum-stability": "stable"
